globalmagic.com (archived on 2004-12-05)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 8696,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.0,
  "homepage_snapshot_redirected_domain": "globalmagic.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20041011160202id_/http://www.globalmagic.com/welcome_f.html",
  "homepage_snapshot_url": "https://web.archive.org/web/20040929083811id_/http%3A//globalmagic.com",
  "interval": "2004_B",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "globalmagic.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041205231556id_/http%3A//www.globalmagic.com/privacy.html",
  "policy_title": "GLOBALMAGIC INTERNET SOLUTIONS",
  "policy_url": "globalmagic.com/privacy.html",
  "sha1": "de753d3d87ede7729e6d9f799661086d268b861a",
  "simhash": 7053143132315361892,
  "simhash_updated": false,
  "site_hostname": "globalmagic.com",
  "site_url": "http://globalmagic.com",
  "smog": 15.43,
  "strict_updated": false,
  "timestamp": "20041205231556",
  "word_count": 1402,
  "year": 2004
}

--- a/g/gl/glo/globalmagic.com.html
+++ b/g/gl/glo/globalmagic.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the globalmagic.com privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606080816id_/http%3A//globalmagic.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the globalmagic.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205231556id_/http%3A//www.globalmagic.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>GLOBALMAGIC INTERNET SOLUTIONS</title>
@@ -370,20 +370,12 @@ function MM_initTimelines() { //v4.0
           <tr> 
             
           <td valign="top"> <img src="images/pixel_clear.gif" width="474" height="10" border="0" alt="spacer graphic"><br>
-            <div align="center"><font face="Arial, Helvetica, sans-serif" size="-2" color="#66CCFF">GlobalMagic 
-              Internet Solutions&nbsp;&nbsp;| &nbsp;5750 Castle Creek Pkwy. Dr. 
-              Ste. 359&nbsp;&nbsp;| &nbsp;Indianapolis IN 46250<br>
-              toll free (800) 720-5978&nbsp;&nbsp;| &nbsp;voice (317) 570-1990&nbsp;&nbsp;| 
-              &nbsp;fax (317) 585-2738<br>
-              <a href="mailto:info@globalmagic.com">info@globalmagic.com</a></font> 
-              <font face="Arial, Helvetica, sans-serif" size="-2" color="#66CCFF">|</font> 
-              <a href="privacy.html"><font face="Arial, Helvetica, sans-serif" size="-2">Privacy 
-              Statement</font></a></div>
-            <p align="center"><font face="Arial, Helvetica, sans-serif" size="-2" color="#66CCFF">© 
-              2001. GlobalMagic Internet Solutions. All Rights Reserved.</font></p>
-            <p align="center">&nbsp;</p>
-            <p align="center">&nbsp;</p>
-              </td>
+            <div align="center">
+              <div align="center"><font face="Arial, Helvetica, sans-serif" size="-2" color="#66CCFF">GlobalMagic Internet Solutions&nbsp;&nbsp;| &nbsp;5750 Castle Creek Pkwy. Dr. Ste. 359&nbsp;&nbsp;| &nbsp;Indianapolis IN 46250<br>
+    toll free (800) 720-5978&nbsp;&nbsp;| &nbsp;voice (317) 570-1990&nbsp;&nbsp;| &nbsp;fax (317) 585-2738<br>
+    <a href="mailto:info@globalmagic.com">info@globalmagic.com</a></font> <font face="Arial, Helvetica, sans-serif" size="-2" color="#66CCFF">|</font> <a href="privacy.html"><font face="Arial, Helvetica, sans-serif" size="-2">Privacy Statement</font></a></div>
+              <p align="center"><font face="Arial, Helvetica, sans-serif" size="-2" color="#66CCFF">© 1994-2004. GlobalMagic Corp. All Rights Reserved.</font></p>
+            </div></td>
           </tr>
         </tbody></table>
       </td>
@@ -404,7 +396,7 @@ function MM_initTimelines() { //v4.0
                 <td width="144" bgcolor="#006699"> <img src="images/pixel_clear.gif" width="123" height="10" border="0" alt="spacer graphic"><br>
                   <table width="133" border="0" cellspacing="0" cellpadding="0">
                     <tbody><tr valign="top"> 
-                      <td width="10"><img src="images/pixel_clear.gif" width="10" height="3704" border="0" alt="spacer graphic"></td>
+                      <td width="10"><img src="images/pixel_clear.gif" width="10" height="2929" border="0" alt="spacer graphic"></td>
                       <td width="123"> 
                         <p><img src="images/pixel_clear.gif" width="123" height="30" border="0" alt="spacer graphic"><br>
                         </p>
