--- a/u/ur/urb/urbandictionary.com.html
+++ b/u/ur/urb/urbandictionary.com.html
@@ -1,38 +1,35 @@
-<!--The following is the downloaded HTML source of the urbandictionary.com privacy policy that was archived on 2004-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040607201227id_/http%3A//www.urbandictionary.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the urbandictionary.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206011155id_/http%3A//www.urbandictionary.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
    <title>UrbanDictionary.com: Privacy Policy</title>
    <meta name="keywords" content="urban vocabulary thesaurus dictionary dictionery dictionairy words slang lexicon vulgar humor alternative lingo dialect speech language talk verbal speechify idiom street ghetto phrase clause etymology word definition saying lexical articulate terminology">
    <meta name="description" content="Urban Dictionary is a slang dictionary with your definitions. Define your world">
-   <script type="text/javascript" language="javascript" src="http://media.urbandictionary.com/thumbs.js"></script>
-   <link href="http://media.urbandictionary.com/style.css" rel="stylesheet" type="text/css">
+   <script type="text/javascript" language="javascript" src="http://media.urbandictionary.com/thumbs2.js"></script>
+   <link href="http://media.urbandictionary.com/style2.css" rel="stylesheet" type="text/css">
 </head>
 <body onload="" bgcolor="#ffffff" text="#443936" link="#928615" vlink="#914870" alink="#928615">
 <center>
-<center><a href="https://secure.urbandictionary.com/ads/"><font color="#909090" style="font-size:10px;text-transform:uppercase" face="verdana,arial,helvetica,sans-serif">Promote your web site at Urban Dictionary for $8</font></a></center>
-<p>
-</p><table width="702" border="0" cellspacing="0" cellpadding="0">
+<table width="702" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr>
 <td align="left">
    <center>
    <form name="dict_form" method="get" action="/define.php">
       <table border="0" cellspacing="0" cellpadding="0" bgcolor="#df7d00" background="http://media.urbandictionary.com/banner-orange.gif" width="702" height="72">
       <tbody><tr>
-         <td width="400"><a href="/"><img src="http://media.urbandictionary.com/blank.gif" width="400" height="72" border="0" alt="UrbanDictionary.com"></a></td>
+         <td width="400"><a href="/"><img src="http://media.urbandictionary.com/blank.gif" width="400" height="72" border="0" alt="urbandictionary.com"></a></td>
          <td nowrap="">
              <table><tbody><tr>
                  <td><b><font color="#FFFFFF">Look up:</font></b></td>
                  <td><input type="text" name="term" size="17" value=""></td>
-                 <td><input type="hidden" name="f" value="1"><input type="submit" value="search"></td>
+                 <td><input type="hidden" name="r" value="f"><input type="submit" value="search"></td>
              </tr></tbody></table>
          </td>
       </tr>
       </tbody></table>
    </form>
       <p>
-   <b>Urban Dictionary</b> is a slang dictionary with <a href="/insert.php">your definitions</a>. <i>Define your world.</i>
-      </p></center>
+   <b>Urban Dictionary</b> is a slang dictionary with your definitions. <i><a href="/insert.php">Define your world</a>.</i>      </p></center>
 <p><b><font size="+1" face="helvetica,arial,sans-serif" color="#000000">Urban Dictionary Privacy Policy</font></b></p><blockquote>
 <p><b><font color="#c25426">Urban Dictionary will never give out your email address or send you a message you did not request.</font></b></p>
 <p><b>Urban Dictionary records session-related data</b> including operating system, session length, IP address, cookie values and date and time of access. We use this information to identify trends that help us improve Urban Dictionary. This information is not used to identify you.</p>
@@ -44,7 +41,8 @@
 </blockquote>
    &nbsp;<p>
    </p><center>
-      <font size="1" color="#999999">Urban Dictionary is not appropriate for all audiences. ©1999-2004.</font> - <a href="/"><font size="1" color="#999999">home</font></a> - <a href="/feedback.php"><font size="1" color="#999999">feedback</font></a> - <a href="/privacy.php"><font size="1" color="#999999">privacy policy</font></a> - <a href="https://secure.urbandictionary.com/ads/"><font size="1" color="#999999">advertise</font></a>
+      <font style="font-size: 10px"><font color="#999999">Urban Dictionary is not appropriate for all audiences. ©1999-2004.</font> - <a href="/"><font color="#999999">home</font></a> - <a href="/feedback.php"><font color="#999999">feedback</font></a> - <a href="/privacy.php"><font color="#999999">privacy policy</font></a> - <a href="https://secure.urbandictionary.com/ads/"><font color="#999999">advertise</font></a> - <a href="https://secure.urbandictionary.com/store/"><font color="#999999">store</font></a></font>
+
    </center>
 </td>
 </tr>
