--- a/s/sm/smm/smm.org.html
+++ b/s/sm/smm/smm.org.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the smm.org privacy policy that was archived on 2004-06-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040608051919id_/http%3A//www.smm.org/info/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the smm.org privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206014539id_/http%3A//www.smm.org/info/privacy.php) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 Final//EN"><html><head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
+<meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
 <title>Science Museum of Minnesota Information Privacy Statement</title>
 <link rel="stylesheet" href="/styles/main.css">
 </head>
