stickyeyes.com (archived on 2004-12-06)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 1283,
  "classifier_probability": 0.89,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.04,
  "homepage_snapshot_redirected_domain": "stickyeyes.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040924034030id_/http://www.stickyeyes.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040924034030id_/http%3A//stickyeyes.com",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "stickyeyes.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041206035029id_/http%3A//www.stickyeyes.com/privacy.html",
  "policy_title": "Stickyeyes.com",
  "policy_url": "stickyeyes.com/privacy.html",
  "sha1": "a0d43256420fb52888a2a53395b737c8ff8ce23f",
  "simhash": 12675155727663181261,
  "simhash_updated": false,
  "site_hostname": "stickyeyes.com",
  "site_url": "http://stickyeyes.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20041206035029",
  "word_count": 217,
  "year": 2004
}

--- a/s/st/sti/stickyeyes.com.html
+++ b/s/st/sti/stickyeyes.com.html
@@ -1,306 +1,38 @@
-<!--The following is the downloaded HTML source of the stickyeyes.com privacy policy that was archived on 2004-02-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040214112258id_/http%3A//www.stickyeyes.com/privacy_statement.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the stickyeyes.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206035029id_/http%3A//www.stickyeyes.com/privacy.html) for the most accurate reproduction.-->
 
-<html><head>
-<title>Search engine optimisation and online marketing strategy</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
+<title>Stickyeyes.com</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<meta name="description" content="Stickyeyes search engine optimisation and online marketing strategy services drive quality traffic to your website">
-<meta name="keywords" content="stickyeyes,website optimisation and promotion,guaranteed search engine placement,search engine positioning,search engine optimisation,marketing consultancy,internet marketing consultant,opt in email marketing,internet marketing strategy,bulk email marketing,online marketing services">
-<!--stickyeyes,search engine optimisation,online marketing services,internet marketing strategy,bulk email marketing,guaranteed search engine placement,internet marketing consultant,opt in email marketing,marketing consultancy,search engine positioning,website optimisation and promotion-->
-<script language="javascript" src="resource/script.js"></script>
-<link rel="stylesheet" href="css/styles.css" type="text/css">
-<script language="JavaScript" type="text/JavaScript">
-<!--
-function MM_reloadPage(init) {  //reloads the window if Nav4 resized
-  if (init==true) with (navigator) {if ((appName=="Netscape")&&(parseInt(appVersion)==4)) {
-    document.MM_pgW=innerWidth; document.MM_pgH=innerHeight; onresize=MM_reloadPage; }}
-  else if (innerWidth!=document.MM_pgW || innerHeight!=document.MM_pgH) location.reload();
-}
-MM_reloadPage(true);
-//-->
-</script>
+<link href="eyes.css" rel="stylesheet" type="text/css">
 </head>
 
-<body bgcolor="#FFFFFF" text="#000000" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" onload="MM_preloadImages('../common/eye_roll.gif')">
-<div id="Layer1" style="position:absolute; width:491px; height:115px; z-index:1; left: 262; top: 57;"> 
-  <table border="0" cellpadding="0" cellspacing="0" width="490">
-    <tbody>
-                              <tr> 
-                                <td bgcolor="#ffffff" width="66"> <p><img height="18" src="common/clear.gif" width="66"></p></td>
-                                <td bgcolor="#ffffff" width="368"> <p><img height="26" src="common/head_privacy.gif" width="228"></p>
-                                  
-          <p class="mainbody">Your Information is Private<br>
-            <br>
-            Subscribers are requested to enter limited personal information during 
-            signups. Under no circumstance will we sell, transfer or disseminate 
-            this personal information gathered by our products to any other entity.<br>
-            <br>
-            <br>
-            Cookie Usage<br>
-            <br>
-            The use of cookies is limited to storing a small amount of non-identifiable 
-            information on a visitor's computer. For visitors to our sites, the 
-            data is used only to maintain information about the user's session.<br>
-            <br>
-            For visitors to sites that have installed our statistics package, 
-            cookies are used to enhance the ability of our product to display 
-            usage patterns. This information does not in any way reveal any personal 
-            data about visitors. Visitors to a subscriber's site will receive 
-            a cookie that stores only a generic id, the prior page, time since 
-            last visit, and number of the visit.<br>
-            <br>
-            <br>
-            Opt-In E-Mail Lists<br>
-            <br>
-            Every new subscriber has the option of not receiving site news and 
-            special promotional offers by either unchecking the opt-in check-box 
-            on the main signup form, or opting out of future mailings by clicking 
-            on the 'Opt-Out' link on any e-mail correspondence sent. Once an user 
-            opts-out no further e-mails will be sent except for traffic alerts 
-            the user sets up and important administrative notices.<span class="mainbody"><br>
-            </span></p>
-                                  </td>
-                                <td bgcolor="#ffffff" width="67"><img height="18" src="common/clear.gif" width="66"></td>
-                              </tr>
-                            </tbody>
-                          </table>
-                        </div>
-<table border="0" cellspacing="0" cellpadding="0">
+<body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+<table width="100%" height="100%" border="0" cellpadding="20" cellspacing="0">
   <tbody><tr>
-    <td width="188" valign="top"><!-- #BeginLibraryItem "/Library/menu_left.lbi" -->
-<script language="JavaScript" type="text/JavaScript">
-<!--
-function MM_swapImgRestore() { //v3.0
-  var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
-}
-
-function MM_preloadImages() { //v3.0
-  var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
-    var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
-    if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
-}
-
-function MM_findObj(n, d) { //v4.01
-  var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
-    d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
-  if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n];
-  for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document);
-  if(!x && d.getElementById) x=d.getElementById(n); return x;
-}
-
-function MM_swapImage() { //v3.0
-  var i,j=0,x,a=MM_swapImage.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
-   if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
-}
-//-->
-</script>
-<table width="260" border="0" cellpadding="0" cellspacing="0">
-  <tbody><tr> 
-    <td width="260" valign="top" bgcolor="66CC00"> 
-      <div align="center"><img src="common/new_img/sticky2.gif" width="260" height="70"></div></td>
-        </tr>
-        <tr> 
-        
-    <td width="260" valign="top" bgcolor="66CC00"> 
-      <table width="251" border="0" cellpadding="0" cellspacing="0">
-        <tbody><tr>
-          <td><img src="common/clear.gif" width="8" height="12"></td>
-          <td><img src="common/clear.gif" width="8" height="8"></td>
-          <td></td>
-        </tr>
-        <tr> 
-          <td width="17"><img src="common/clear.gif" width="17" height="26" name="home"></td>
-          <td width="228"><a href="index.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('home','','common/eye_roll.gif',1)"><img src="common/home_but.gif" width="133" height="26" border="0" alt="Home page"></a></td>
-          <td width="6"></td>
-        </tr>
-        <tr> 
-          <td width="17"><img src="common/clear.gif" width="17" height="26" name="about"></td>
-          <td width="228"><a href="about_us.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('about','','common/eye_roll.gif',1)"><img src="common/about_but.gif" width="133" height="26" border="0" alt="About Stickyeyes Search Engine Marketing Agency"></a></td>
-          <td></td>
-        </tr>
-        <tr> 
-          <td><img src="common/clear.gif" width="17" height="26" name="news"></td>
-          <td><a href="news.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('news','','common/eye_roll.gif',1)"><img src="common/news_but.gif" width="133" height="26" border="0" alt="Online Marketing News"></a></td>
-          <td></td>
-        </tr>
-        <tr> 
-          <td width="17"><img src="common/clear.gif" width="17" height="26" name="services"></td>
-          <td width="228"><div align="left"><a href="services.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('services','','common/eye_roll.gif',1)"><img src="common/online_mkt_services_but.gif" width="227" height="26" border="0" alt="The Online Marketing Services we offer"></a></div></td>
-          <td></td>
-        </tr>
-        <tr> 
-          <td width="17"><img src="common/clear.gif" width="17" height="26" name="credentials"></td>
-          <td width="228"><a href="credentials.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('credentials','','common/eye_roll.gif',1)"><img src="common/credentials_but.gif" width="133" height="26" border="0" alt="Examples of our Search Engine Optimisation successes"></a></td>
-          <td></td>
-        </tr>
-        <tr> 
-          <td width="17"><img src="common/clear.gif" width="17" height="26" name="wisdom"></td>
-          <td width="228"><a href="wisdom.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('wisdom','','common/eye_roll.gif',1)"><img src="common/wisdom_but.gif" width="133" height="26" border="0" alt="Links to Search Engine Marketing resources"></a></td>
-          <td></td>
-        </tr>
-        <!--<tr> 
-          <td width="66"></td>
-          <td width="17"><img src="common/clear.gif" width="17" height="26" name="news"></td>
-          <td width="184"><a href="news.asp" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('news','','common/eye_roll.gif',1)"><img src="common/news_but.gif" width="133" height="26" border="0" alt="Online news"></a></td>
-          <td width="10"></td>
-        </tr>-->
-        <tr> 
-          <td width="17"><img src="common/clear.gif" width="17" height="26" name="events"></td>
-          <td width="228"><a href="events.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('events','','common/eye_roll.gif',1)"><img src="common/events_but.gif" width="133" height="26" border="0" alt="Future Online Marketing events where you can meet the Stickyeyes team"></a></td>
-          <td></td>
-        </tr>
-        <tr> 
-          <td width="17"><img src="common/clear.gif" width="17" height="26" name="contact"></td>
-          <td width="228"><a href="contact_us.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('contact','','common/eye_roll.gif',1)"><img src="common/contact_but.gif" width="133" height="26" border="0" alt="Contact us"></a></td>
-          <td></td>
-        </tr>
-        <tr> 
-          <td><img src="common/clear.gif" width="8" height="8"></td>
-          <td><img src="common/clear.gif" width="8" height="8"></td>
-          <td></td>
-        </tr>
-        <tr> 
-          <td>&nbsp;</td>
-          <td width="228"><a href="JavaScript: void(0);" onclick="window.open('http://www.stickyeyes.com/cgi-bin/position.cgi','win', 'toolbar=yes,location=no,directories=no,status=no,menubar=yes,scrollbars=yes,resizable=yes,width=500,height=700')"><img src="common/rankometer.gif" width="141" height="45" border="0" alt="Rankometer - check your search engine rankings"></a></td>
-          <td></td>
-        </tr>
-        <tr> 
-          <td><img src="common/clear.gif" width="8" height="8"></td>
-          <td><img src="common/clear.gif" width="8" height="8"></td>
-          <td></td>
-        </tr>
-        <tr> 
-          <td>&nbsp;</td>
-          <td><p class="mainbody">To receive our newsletter keeping you informed 
-              of search engine news and general online marketing information, 
-              simply enter your name and email address below.</p></td>
-          <td></td>
-        </tr>
-        <tr> 
-          <td width="17"><img src="common/clear.gif" width="8" height="8"></td>
-          <td width="228"><img src="common/clear.gif" width="8" height="8"></td>
-          <td></td>
-        </tr>
-        <tr> 
-          <td>&nbsp;</td>
-          <td><form name="form1" method="post" action="http://www.stickyeyes.com/cgi-bin/stickymail.pl">
-              <table width="213" border="0" cellpadding="2" cellspacing="0" class="mainbody">
-                <tbody><tr> 
-                  <td width="106">Name</td>
-                  <td width="106">Email</td>
-                </tr>
-                <tr> 
-                  <td>
-<input name="Name" type="text" id="Name" size="10"></td>
-                  <td><input name="Email" type="text" id="Email2" size="10"></td>
-                </tr>
-                <tr> 
-                  <td>
-<input type="submit" name="Submit" value="Submit"> 
-                    <input type="hidden" name="recipient" value="news@optimum4.com"> 
-                    <input type="hidden" name="subject" value="Stickeyes News Letter Sign Up"> 
-                    <input type="hidden" name="redirect" value="http://www.stickyeyes.com/ta.htm"> 
-                    <input type="hidden" name="required" value="Name,Email"> </td>
-                  <td>&nbsp;</td>
-                </tr>
-              </tbody></table>
-            </form></td>
-          <td></td>
-        </tr>
-        <tr> 
-          <td>&nbsp;</td>
-          <td><p class="mainbodysml">*Please note we <u>do not</u> sell or rent 
-              customers names or other information to 3rd parties.</p></td>
-          <td></td>
-        </tr>
-        <tr> 
-          <td><img src="common/clear.gif" width="8" height="8"></td>
-          <td><img src="common/clear.gif" width="8" height="8"></td>
-          <td><img src="common/clear.gif" width="8" height="8"></td>
-        </tr>
-        <tr> 
-          <td>&nbsp;</td>
-          <td><a href="http://www.optimum4.com" target="_blank"><img src="common/driven_opt4.jpg" width="141" height="34" border="0"></a></td>
-          <td></td>
-        </tr>
-        <tr> 
-          <td>&nbsp;</td>
-          <td></td>
-          <td></td>
-        </tr>
-        <!--<tr> 
-          <td> 
-            <div align="center"><a href="linkometer.asp"><img src="common/linkometer.gif" width="141" height="45" border="0" alt="Linkometer - check your links"></a></div>
-          </td>
-        </tr>
-        <tr> 
-          <td><img src="common/clear.gif" width="17" height="20"></td>
-        </tr>
-        <tr> 
-          <td> 
-            <div align="center"><a href="statguesser.asp"><img src="common/stat_guesser.gif" width="141" height="45" border="0" alt="Stat guesser"></a></div>
-          </td>
-        </tr>
-        <tr> 
-          <td><img src="common/clear.gif" width="17" height="20"></td>
-        </tr>-->
-      </tbody></table>
-    </td>
-        </tr>
-      </tbody></table><!-- #EndLibraryItem --></td>
-    <td valign="top"> 
-      <table width="502" border="0" cellspacing="0" cellpadding="0">
-        <tbody><tr>
-          <td>
-            <table width="502" height="510" border="0" cellpadding="0" cellspacing="0">
-              <tbody><tr> 
-                <td bgcolor="#e5e5e5" width="1"></td>
-                <td width="500" valign="top">
-                  <table width="500" border="0" cellspacing="0" cellpadding="0">
-                    <tbody><tr>
-                      <td><img src="common/clear.gif" width="500" height="55"></td>
-                    </tr>
-                    <tr>
-                      <td>&nbsp; </td>
-                    </tr>
-                  </tbody></table>
-                </td>
-                <td bgcolor="#e5e5e5" width="1" height="515"></td>
-              </tr>
-            </tbody></table>
-          </td>
-        </tr>
-        <tr>
-          <td><!-- #BeginLibraryItem "/Library/menu_bot.lbi" -->
-<table width="502" border="0" cellspacing="0" cellpadding="0" align="center">
-  <tbody><tr> 
-    <td height="39"><div align="center"> 
-        <table width="502" border="0" cellspacing="0" cellpadding="0">
-          <tbody><tr> 
-            <td width="1" bgcolor="e5e5e5"><img src="common/clear.gif" width="1" height="10"></td>
-            <td><div align="center"><img src="common/pic2.gif" width="343" height="98"></div></td>
-            <td width="1" bgcolor="#e5e5e5"><img src="common/clear.gif" width="1" height="10"></td>
-          </tr>
-        </tbody></table>
-      </div></td>
-  </tr>
-  <tr> 
-    <td width="502" height="39" bgcolor="#FF6600"> <div align="center"> 
-        <p class="mainbody2"><a href="index.htm" class="mainbody2">home</a> 
-          | <a href="about_us.htm" class="mainbody2">about us</a> | <a href="news.htm" class="mainbody2"> 
-          online news</a> | <a href="services.htm" class="mainbody2"> online 
-          marketing services</a> | <a href="credentials.htm" class="mainbody2">credentials</a> 
-          | <a href="wisdom.htm" class="mainbody2">wisdom</a> | <a href="events.htm" class="mainbody2">events</a> 
-          | <a href="contact_us.htm" class="mainbody2">contact us</a> <a href="sitemap.htm" class="mainbody2">sitemap</a> 
-          | <a href="privacy_statement.htm" class="mainbody2">privacy statement</a> 
-        </p>
-      </div></td>
-  </tr>
-</tbody></table>
-<!-- #EndLibraryItem --></td>
-        </tr>
-      </tbody></table>
-    </td>
+    <td valign="top" background="images/backround2.gif">
+<p class="header">Privacy Policy</p>
+      <p class="body"><strong>Your Information is Private</strong><br>
+        Subscribers are requested to enter limited personal information during 
+        signups. Under no circumstance will we sell, transfer or disseminate this 
+        personal information gathered by our products to any other entity.</p>
+      <p class="body"><strong>Cookie Usage</strong><br>
+        The use of cookies is limited to storing a small amount of non-identifiable 
+        information on a visitor's computer. For visitors to our sites, the data 
+        is used only to maintain information about the user's session.</p>
+      <p class="body">For visitors to sites that have installed our statistics 
+        package, cookies are used to enhance the ability of our product to display 
+        usage patterns. This information does not in any way reveal any personal 
+        data about visitors. Visitors to a subscriber's site will receive a cookie 
+        that stores only a generic id, the prior page, time since last visit, 
+        and number of the visit.</p>
+      <p class="body"><strong>Opt-In E-Mail Lists</strong><br>
+        Every new subscriber has the option of not receiving site news and special 
+        promotional offers by either unchecking the opt-in check-box on the main 
+        signup form, or opting out of future mailings by clicking on the 'Opt-Out' 
+        link on any e-mail correspondence sent. Once an user opts-out no further 
+        e-mails will be sent except for traffic alerts the user sets up and important 
+        administrative notices.</p></td>
   </tr>
 </tbody></table>
 
