--- a/s/se/sei/seic.com.html
+++ b/s/se/sei/seic.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the seic.com privacy policy that was archived on 2004-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040620091554id_/http%3A//www2.seic.com/docs/privacyPolicy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the seic.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206072046id_/http%3A//www.seic.com/docs/privacyPolicy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <link rel="stylesheet" href="corp.css" type="text/css">
