--- a/l/lt/lta/lta.gov.sg.html
+++ b/l/lt/lta/lta.gov.sg.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the lta.gov.sg privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602215422id_/http%3A//www.lta.gov.sg/home/home_privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lta.gov.sg privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206083432id_/http%3A//www.lta.gov.sg/home/home_privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -87,7 +87,9 @@
           </tr>
         </tbody>
       </table>
-      <p>&nbsp;</p></td>
+      <p>&nbsp;</p>
+      <p><span class="home">Last Updated on 17/07/2003</span></p>
+    </td>
   </tr>
 </tbody></table>
 <br>
